<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/berry_basket"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="300dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.9">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berry_game"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="#80FFFFFF"
            android:hint="PLAYER"
            android:inputType="textPersonName"
            tools:ignore="Autofill,HardcodedText" />

        <RadioGroup
            android:id="@+id/rgDifficulty"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="#80FFFFFF">

            <RadioButton
                android:id="@+id/rbEasy"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/easy"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/rbMedium"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/medium"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/rbHard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/hard"
                android:gravity="center" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:background="@drawable/play_button"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnRanking"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/btnRanking"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:background="@drawable/ranking_button"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/btnPlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>