<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/berry_basket"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:padding="20dp">

        <!-- Title -->
        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berry_game_info"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"/>

        <!-- Pikachu Section -->
        <TextView
            android:id="@+id/featuresTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameplay"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/featuresContent1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- Touch the screen to move your character."
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:paddingBottom="16dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/pikachu" />

        <!-- Berries Section -->
        <TextView
            android:id="@+id/featuresContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- Collect as many berries as you can to earn points."
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/razz_berry"
                android:contentDescription="@string/berry1" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/pinap_berry"
                android:contentDescription="@string/berry2"
                android:layout_marginStart="8dp" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/nanap_berry"
                android:contentDescription="@string/berry3"
                android:layout_marginStart="8dp" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/pinap_berry_silver"
                android:contentDescription="@string/berry5"
                android:layout_marginStart="8dp" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/razz_berry_golden"
                android:contentDescription="@string/berry10"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/featuresContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- There are five types of berries in the game, and each type gives you a different number of points. The rarer the berry, the more points it awards."
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Razz Berry -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/razz_berry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/berry1"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <!-- Pinap Berry -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/pinap_berry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/berry2"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <!-- Nanap Berry -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/nanap_berry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/berry3"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <!-- Silver Pinap Berry -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/pinap_berry_silver" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/berry5"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <!-- Golden Razz Berry -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/razz_berry_golden" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/berry10"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

        <!-- Heart -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- Collect hearts to gain extra lives and extend your gameplay.\n- The game ends when your health reaches zero."
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/heart" />

        <!-- Golem -->
        <TextView
            android:id="@+id/obstaclesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obstacles"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/golem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="- Avoid colliding with obstacles (golem), as they will reduce your health."
                android:textSize="16sp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
